--- a/zuri2.html
+++ b/zuri2.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zuri</title>
     <link href="zuri2.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3a968d4fef.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <div class="nav">
 <nav>
-<img src="https://training.zuri.team/logo.svg">
+<img  class="pic" src="https://training.zuri.team/logo.svg">
 
     <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Why Us?</a></li>
-        <li><a href="#">Stacks Covered</a></li>
-        <li><a href="#">FAQs</a></li>
-        <li><a href="#">Enroll Now</a></li>
+        <li><a class="a" href="#">About</a></li>
+        <li><a  class="a"href="#">Why Us?</a></li>
+        <li><a class="a" href="#">Stacks Covered</a></li>
+        <li><a class="a" href="#">FAQs</a></li>
+        <li><a class="a" href="#">Enroll Now</a></li>
     </ul>
 </nav>
 </div>
@@ -148,23 +151,24 @@
 
     <img class="sec-5" src="https://training.zuri.team/section5-image.png">
     <button class="bs-5">Teamwork</button>
-    <!-- <img class="hand" src="https://training.zuri.team/hand.svg"> -->
+    <div  class="hand" ><img src="https://training.zuri.team/hand.svg"></div>
     <button class="bh">Mentorship</button>
-    <!-- <img class="mentor" src="https://training.zuri.team/mentor.svg"> -->
+    <div class="mentor"><img  src="https://training.zuri.team/mentor.svg"></div>
     <button class="bp">Practice</button>
-    <!-- <img class="practice" src="https://training.zuri.team/practice.svg"> -->
+    <div  class="practice" ><img src="https://training.zuri.team/practice.svg"></div>
     <button class="bfg">Fun & Games</button>
-    <!-- <img class="games" src="https://training.zuri.team/games.svg"> -->
-    <img class="dotsec5" src="https://training.zuri.team/dotsection5.svg">
+    <div class="games"><img  src="https://training.zuri.team/games.svg"></div>
+    <div class="dotsec5" ><img src="https://training.zuri.team/dotsection5.svg"></div>
+
 </div>
 
-<p>Scope Of Program</p>
-<p>Here is the list of areas that<br> will be explored in the<br>training.</p>
+<p class="SOP">Scope Of Program</p>
+<p class="exp">Here is the list of areas that<br> will be explored in the<br>training.</p>
 
 <img  class="sec6" src="https://training.zuri.team/section6.svg">
 
 <div>
-    <div>
+    <div class="c">
         <p class="l1">Frontend Development</p>
         <img src="https://training.zuri.team/html.svg"  class="html">
         <img src="https://training.zuri.team/css-3%20logo.svg"  class="css">
@@ -172,7 +176,7 @@
             <p class="l2">This track deals with the aspect of your application that the users interact with. A front-end developer will be able to correctly interpret a given design to the user interface.</p>
     </div>
     
-    <div>
+    <div class="d">
         <p class="l1">Backend Development</p>
         <img src="https://training.zuri.team/php2%20logo.svg"  class="php">
         <img src="https://training.zuri.team/python-4%20logo.svg"  class="python">
@@ -180,20 +184,20 @@
             <p class="l2">This track deals with the aspect of the application the user does not directly interact with. It allows the frontend function either by running some back-end code or connecting to the database.</p>
         
     </div>
-    <div>
+    <div class="e">
         <p class="l1">Product Design</p>
             <img src="https://training.zuri.team/adobe-xd%20logo.svg"  class="adobe">
             <img src="https://training.zuri.team/Figma%20logo.svg"  class="figma">
             <p class="l2">This track deals with creating a graphic plan for an application. You will learn to convert project documentation into viewable and understandable graphic design for the developers to work with.</p>
     </div>
-    <div>
+    <div class="f">
         <p class="l1">DevOPS</p>
             <img src="https://training.zuri.team/Ubuntu%20logo.svg"  class="ubuntu">
             <img src="https://training.zuri.team/Bash%20logo.svg"  class="bash">
             <img src="https://training.zuri.team/aws%20logo.svg"  class="aws">
             <p class="l2">The DevOps track is an extension of the backend track. It involves tools that’ll allow the participant to deploy solutions for public use.</p>
     </div>
-    <div>
+    <div class="g">
         <p class="l1">Fullstack Development</p>
             <img src="https://training.zuri.team/html.svg"  class="html2">
             <img src="https://training.zuri.team/css-3%20logo.svg"  class="css2">
@@ -201,7 +205,7 @@
             <img src="https://training.zuri.team/python-4%20logo.svg"  class="python2">
             <p class="l2">A combination of frontend, backend, and DevOps. This track will only be available to participants who have the time to dedicate to the training.</p>
     </div>
-    <div>
+    <div class="h">
         <p class="l1">Frameworks</p>
             <img src="https://training.zuri.team/Laravel%20logo.svg"  class="laravel">
             <img src="https://training.zuri.team/React%20logo.svg"  class="logo">
@@ -211,6 +215,7 @@
     <a href="https://training.zuri.team/enroll"><button class="training-enroll">Enroll Now</button></a>
 </div>
 
+<hr class="hr">
 <img src="https://training.zuri.team/section7wire.svg" class="sc7wire">
 
 <p class="GQ">Got Questions?</p>
